--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background: url('./static/stars.jpg');
+body {
+    background: url("./stars.jpg");
     background-repeat: repeat;
 }
