fixing tz symbol and a few tweaks

--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-    background: url("./static/stars.jpg");
+    background: url("/stars.jpg");
     background-repeat: repeat;
 }
