--- a/src/app.css
+++ b/src/app.css
@@ -35,6 +35,9 @@ body {
     .stat {
         @apply bg-zinc-800;
     }
+    .stat-value {
+        @apply text-2xl md:text-4xl;
+    }
     .collapse-content {
         @apply bg-zinc-900 rounded-lg;
     }
